tests/paczka1/fuzzy1/30470251.err
Error in line 10: 3ry15oW3 S20 63,1
Error in line 8: 2LrIPfpi S48 72,0
Error in line 19: 2LrIPfpi A751 417,1
Error in line 21: PgtnvAS3rX A599 73,77
Error in line 18: PgtnvAS3rX A599 16,2
